Corrected popover link colors, borders, spacing

--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -280,8 +280,27 @@
 .popover {
 	&.c-popover--link {
 		max-width: 30%;
-		label {
+		.popover-body {
+			padding: 0;
+			border-top-left-radius: calc(0.3rem - 1px);
+			border-top-right-radius: calc(0.3rem - 1px);
+		}
+
+		label,
+		&__label {
 			margin: 0;
+		}
+
+		&.bs-popover-bottom .arrow {
+			&::after,
+			&::before {
+				border-bottom-color: $light;
+			}
+		}
+
+		&__header {
+			border-top-left-radius: 0.3rem;
+			border-top-right-radius: 0.3rem;
 		}
 	}
 }
